--- a/trunk/boxee/index.htm
+++ b/trunk/boxee/index.htm
@@ -10,7 +10,7 @@
 
 <body>
 
-<pre><font face="Arial">Navi-X repository is <a href="http://www.navi-x.org/boxee">http://www.navi-x.org/boxee</a>
+<pre><font face="Arial">Navi-X repository is <a href="http://navi-x.googlecode.com/svn/trunk/boxee">http://navi-x.googlecode.com/svn/trunk/boxee</a>
 
 <b><font size="4">Adding Repositories</font></b>
 
